--- a/style.css
+++ b/style.css
@@ -19,5 +19,16 @@
 .todo {
     display: flex;
     flex-direction: row;
+    & p{
+        border:1px black solid;
+        margin: 3px;
+    }
+
+    & p:nth-child(2){
+        width:15rem;
+    }
+    & p:nth-child(3){
+        width: 2rem;
+    }
     
 }
